fix: ubb预览overflowy的问题

--- a/CC98.Forum/CC98.Forum/Components/UbbEditor/stylesheet.scss
+++ b/CC98.Forum/CC98.Forum/Components/UbbEditor/stylesheet.scss
@@ -212,7 +212,8 @@
 .ubb-preview {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
     padding: .5rem;
 }
 
